--- a/packages/common-starknet/templates/abi-interface.ts.ejs
+++ b/packages/common-starknet/templates/abi-interface.ts.ejs
@@ -1,16 +1,13 @@
 // SPDX-License-Identifier: Apache-2.0
 
 // Auto-generated , DO NOT EDIT
-import {EthereumLog, EthereumTransaction, LightEthereumLog} from "@subql/types-ethereum";
+import {StarknetLog, StarknetTransaction} from "@subql/types-Starknet";
 
 import {<% props.abi.events.forEach(function(event){ %><%= event %>Event, <% }); %><%=props.abi.name%>} from '../contracts/<%=props.abi.name%>'
 
 <% props.abi.events.forEach(function(event){ %>
-export type <%=helper.upperFirst(event) %>Log = EthereumLog<<%=event%>Event["args"]>
-<% }); %>
-<% props.abi.events.forEach(function(event){ %>
-export type Light<%=helper.upperFirst(event) %>Log = LightEthereumLog<<%=event%>Event["args"]>
+export type <%=helper.upperFirst(event) %>Log = StarknetLog<<%=event%>Event["args"]>
 <% }); %>
 <% props.abi.functions.forEach(function(_function){ %>
-export type <%=helper.upperFirst(_function.typeName) %>Transaction = EthereumTransaction<Parameters<<%=props.abi.name%>['functions']['<%=_function.functionName%>']>>
+export type <%=helper.upperFirst(_function.typeName) %>Transaction = StarknetTransaction<Parameters<<%=props.abi.name%>['functions']['<%=_function.functionName%>']>>
 <% }); %>
